implementing ncalayer container